Updated custom img syntax in controller to provide correct src path and to allow for specifying alignment; added accompanying styles

--- a/static/plugin_slider/css/plugin_slider.less
+++ b/static/plugin_slider/css/plugin_slider.less
@@ -126,7 +126,10 @@ body #page div.plugin_slider_slide{
                                         line-height:2em;
                                         margin:0;
     }
-    img                                {margin-right: @baseLineHeight * 2;
+    img                                {margin: 0 auto;
+                                        display: block;
+        &.pull-right                   {margin-right: @baseLineHeight * 2;}
+        &.pull-left                    {margin-left: @baseLineHeight * 2;}
     }
     table                              {background-color: transparent;
                                         border-collapse: separate;
